# agentic-factory-hack

./: .gitignore  README.md  factory-hack.sln  requirements.txt
.aspire/: settings.json
.devcontainer/: devcontainer.json  setup-dotnet.sh
.github/: copilot-instructions.md
.github/agents/: agentplanning.agent.md  hackagent.agent.md
.github/agents/knowledge/: factory-hack.md
challenge-0/: README.md  get-keys.sh  seed-data.sh
challenge-0/data/: knowledge-base.json  machines.json  maintenance-history.json  maintenance-windows.json  parts-inventory.json  technicians.json  telemetry-samples.json  thresholds.json  work-orders.json
challenge-0/infra/: azuredeploy.json
challenge-1/: README.md  create_knowledge_base.ipynb
challenge-1/agents/: anomaly_classification_agent.py  anomaly_classification_agent_mcp.py  fault_diagnosis_agent.py
challenge-2/: README.md
challenge-2/example-solution/RepairPlanner/: Program.cs  RepairPlanner.csproj  RepairPlannerAgent.cs
challenge-3/: README.md  run-batch.py  run-batch.sh
challenge-3/agents/: maintenance_scheduler_agent.py  parts_ordering_agent.py
challenge-3/agents/services/: cosmos_db_service.py  observability.py
challenge-4/: README.md  test.http
challenge-4/agent-workflow/: apphost.cs  apphost.run.json
challenge-4/agent-workflow/app/: agents.py  main.py  pyproject.toml  reproduce_issue.py
challenge-4/agent-workflow/dotnetworkflow/: AgentProviders.cs  FactoryWorkflow.csproj  Models.cs  Program.cs  TextOnlyAgentExecutor.cs
scripts/: deployment-rg-jd-swc-1.json  provision-hack-environment.sh
(+24 files in other folders)
